force-app/main/default/objects/Membership_Contact_Role__c/Membership_Contact_Role__c.object-meta.xml
<CustomObject>
    <label>Membership Contact Role</label>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>Contact Role</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Membership Contact Roles</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>