force-app/main/default/objects/Membership_Contact_Role__c/fields/Membership__c.field-meta.xml
<CustomField>
    <fullName>Membership__c</fullName>
    <label>Membership</label>
    <referenceTo>Membership__c</referenceTo>
    <relationshipLabel>Membership Contact Roles</relationshipLabel>
    <relationshipName>Membership_Contact_Roles</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>