force-app/main/default/objects/Membership_Contact_Role__c/fields/Role__c.field-meta.xml
<CustomField>
    <fullName>Role__c</fullName>
    <label>Role</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Influencer</fullName>
            </value>
            <value>
                <fullName>Super User</fullName>
            </value>
            <value>
                <fullName>Decision Maker</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>